examples/banking/ts-target/src/bounded-contexts/marketing/marketing/domain/errors/index.ts
import { InvalidNumberOfTransactionsError } from './InvalidNumberOfTransactionsError';

export namespace DomainErrors {
  export class InvalidNumberOfTransactions extends InvalidNumberOfTransactionsError {}
}
